--- a/app/src/main/res/layout/activity_chat_messanger_page.xml
+++ b/app/src/main/res/layout/activity_chat_messanger_page.xml
@@ -1,9 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".pages.ChatMessangerPage">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".pages.ChatMessangerPage">
+
+
+        <LinearLayout
+            android:id="@+id/top_bar_chat_msg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layoutDirection="ltr"
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp">
+
+            <Button
+                android:id="@+id/btn_back_chat_msg"
+                android:layout_width="48dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="start"
+                android:background="@drawable/arrow_back_shap"
+                android:contentDescription="@string/back_btn" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/google_green"
+                android:layout_marginStart="10dp"
+                android:contentDescription="@string/pic_chat" />
+
+            <FrameLayout
+                android:id="@+id/ly_f"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/btn_menu_chat_msg"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/right_msg_menu_shap"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:contentDescription="@string/btn_menu" />
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chat_msg_view_list"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_below="@id/top_bar_chat_msg"
+            android:layout_margin="15dp"
+            />
+
+        <LinearLayout
+            android:id="@+id/ly_bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/chat_msg_view_list"
+            android:layoutDirection="ltr"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_mic"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:background="@drawable/mic_button_shap"
+                android:clickable="true"
+                android:contentDescription="@string/btn_menu"
+                android:enabled="true"
+                android:focusable="true"
+                android:src="@drawable/mic_icon"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                 />
+
+            <EditText
+                android:id="@+id/chat_msg_textBox"
+                android:layout_width="220dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:autofillHints="name"
+                android:background="@drawable/text_box_shap_bg_shap"
+                android:hint="@string/hint_msg_box"
+                android:inputType="text"
+                android:paddingStart="20sp"
+                android:paddingEnd="20dp"
+                android:textColor="@color/signTextColor"
+               />
+
+            <ImageView
+                android:id="@+id/btn_send_msg"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+
+                android:background="@drawable/button_send_shap"
+                android:contentDescription="@string/bton_send_content"
+                android:clickable="true"
+                android:enabled="true"
+                android:focusable="true"
+                android:layout_gravity="end"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+              />
+        </LinearLayout>
+    </RelativeLayout>
+</layout>
