add chat massenger page

--- a/app/src/main/res/layout/activity_chat_messanger_page.xml
+++ b/app/src/main/res/layout/activity_chat_messanger_page.xml
@@ -8,9 +8,13 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/root_ly"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".pages.ChatMessangerPage">
+        tools:context=".pages.ChatMessangerPage"
+
+
+        >
 
 
         <LinearLayout
@@ -60,23 +64,29 @@
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:layout_below="@id/top_bar_chat_msg"
-            android:layout_margin="15dp"
-            />
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp" />
 
         <LinearLayout
             android:id="@+id/ly_bottom_bar"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/chat_msg_view_list"
             android:layoutDirection="ltr"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+
+            >
 
             <ImageView
                 android:id="@+id/btn_mic"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_gravity="center"
+                android:layout_gravity="start|center"
                 android:background="@drawable/mic_button_shap"
                 android:clickable="true"
                 android:contentDescription="@string/btn_menu"
@@ -90,28 +100,31 @@
             <EditText
                 android:id="@+id/chat_msg_textBox"
                 android:layout_width="220dp"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:autofillHints="name"
                 android:background="@drawable/text_box_shap_bg_shap"
                 android:hint="@string/hint_msg_box"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:paddingStart="20sp"
                 android:paddingEnd="20dp"
+                android:paddingBottom="20dp"
+
+                android:gravity="bottom|center|start"
                 android:textColor="@color/signTextColor"
-               />
+                />
 
             <ImageView
                 android:id="@+id/btn_send_msg"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-
+                android:src="@drawable/send_icon"
                 android:background="@drawable/button_send_shap"
-                android:contentDescription="@string/bton_send_content"
+                android:contentDescription="@string/btn_send_content"
                 android:clickable="true"
                 android:enabled="true"
                 android:focusable="true"
-                android:layout_gravity="end"
+                android:layout_gravity="end|center"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
               />
