the clean architecture

--- a/app/src/main/res/layout/activity_chat_messanger_page.xml
+++ b/app/src/main/res/layout/activity_chat_messanger_page.xml
@@ -11,7 +11,7 @@
         android:id="@+id/root_ly"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".pages.ChatMessangerPage"
+        tools:context=".featuer_chat.presentation.activites.chat_massenger_activity.ChatMessangerPage"
 
 
         >
