--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pages.LoginActivityScreen"
+    tools:context=".feature_authetication.presentation.activites.login_activity.LoginActivityScreen"
     android:layout_marginBottom="15dp"
 
     >
