--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".pages.SignUpActivity"
+    tools:context=".feature_authetication.presentation.activites.sign_up_activity.SignUpActivity"
     android:gravity="center"
     android:layout_marginBottom="15dp"
     >
