add view model for sgin up

--- a/app/src/main/res/layout/activity_chat_messanger_page.xml
+++ b/app/src/main/res/layout/activity_chat_messanger_page.xml
@@ -109,9 +109,8 @@
                 android:paddingStart="20sp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="20dp"
-
                 android:gravity="bottom|center|start"
-                android:textColor="@color/signTextColor"
+                android:textColor="@color/black_lighter"
                 />
 
             <ImageView
