--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/root_ly_sign_up"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".feature_authetication.presentation.activites.sign_up_activity.SignUpActivity"
-    android:gravity="center"
-    android:layout_marginBottom="15dp"
     >
     <LinearLayout
         android:id="@+id/top_bar"
@@ -15,9 +14,11 @@
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:layoutDirection="ltr"
-        android:gravity="top"
         android:background="@color/white_lighter"
+        android:layout_alignParentTop="true"
+       android:layout_marginTop="25dp"
         >
+
          <Button
              android:layout_width="48dp"
              android:layout_height="wrap_content"
