--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="lighterSignTextColor">#9CD8DB</color>
     <color name="light_black">#1D1C1C</color>
     <color name="black_lighter">#3C3C3C</color>
+    <color name="white_lighter">#FAFAFA</color>
+
 </resources>
