done make sign up with email and pass context and make toast validation and set action class

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,6 +24,7 @@
             android:layout_marginTop="25dp">
 
             <Button
+                android:id="@+id/btn_sign_up_back"
                 android:layout_width="48dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
@@ -41,7 +42,15 @@
                 android:layout_marginRight="5dp" />
 
         </LinearLayout>
+          <ProgressBar
+              android:id="@+id/progress_bar"
+              android:layout_width="80dp"
+              android:layout_height="80dp"
+              android:layout_centerInParent="true"
+              android:visibility="invisible"
+              android:theme="@style/Theme.TestChatApp.WhiteAccent"
 
+              />
         <TextView
             android:id="@+id/create_account"
             android:layout_width="match_parent"
