--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,7 @@
             true
         </item>
     </style>
+    <style name="Theme.TestChatApp.WhiteAccent">
+        <item name="colorAccent">@color/signTextColor</item> <!-- Whatever color you want-->
+    </style>
 </resources>
