--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature_authetication.presentation.activites.login_activity.LoginActivityScreen"
+    tools:context=".feature_authetication.presentation.activites.login_activity.LoginActivity"
     android:layout_marginBottom="15dp"
 
     >
@@ -102,8 +102,16 @@
       android:focusable="true"
       android:text="@string/signIn"
       android:textColor="@color/white"
-
       tools:ignore="DuplicateSpeakableTextCheck" />
+  <ProgressBar
+      android:id="@+id/progress_bar_log"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_centerInParent="true"
+      android:visibility="invisible"
+      android:theme="@style/Theme.TestChatApp.WhiteAccent"
+
+      />
 <TextView
     android:id="@+id/dont"
     android:layout_width="wrap_content"
