--- a/app/src/main/res/layout/activity_users_chat_list.xml
+++ b/app/src/main/res/layout/activity_users_chat_list.xml
@@ -26,17 +26,15 @@
             <LinearLayout
                 android:id="@+id/group_chat_img"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-
+                android:layout_height="50dp"
                 >
 
                 <ImageView
                     android:id="@+id/image_chat_user"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-
-                    android:src="@drawable/google_green" />
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/menu" />
 
                 <TextView
 
@@ -67,7 +65,9 @@
                     android:src="@drawable/add_chats_friend_icon"
                     android:layout_gravity="end"
                     android:layout_marginEnd="10dp"
-
+                    android:clickable="true"
+                    android:enabled="true"
+                    android:focusable="true"
                     />
             </FrameLayout>
         </LinearLayout>
@@ -75,7 +75,7 @@
         <EditText
             android:id="@+id/search_textBox"
             android:layout_width="match_parent"
-            android:layout_height="60sp"
+            android:layout_height="50sp"
             android:layout_below="@id/top_bar_chat_list"
             android:hint="@string/hint_search_box"
             android:inputType="text"
@@ -86,15 +86,24 @@
             android:paddingEnd="20dp"
             android:background="@drawable/text_box_shap_bg_shap"
             android:autofillHints="password" />
+        <ProgressBar
+            android:id="@+id/users_list_progress_bar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            android:theme="@style/Theme.TestChatApp.WhiteAccent"
 
+            />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/users_chat_list_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/search_textBox"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="37dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp" />
+            android:padding="10dp"
+            android:layout_marginBottom="20dp" />
     </RelativeLayout>
 </layout>
