--- a/app/src/main/res/layout/user_item_list.xml
+++ b/app/src/main/res/layout/user_item_list.xml
@@ -15,6 +15,7 @@
             android:orientation="horizontal"
             android:layout_margin="10dp"
             android:padding="10dp"
+            android:layoutDirection="ltr"
             >
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
