--- a/app/src/main/res/layout/activity_chat_messanger_page.xml
+++ b/app/src/main/res/layout/activity_chat_messanger_page.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".featuer_chat.presentation.activites.chat_massenger_activity.ChatMessangerPage"
+        android:background="@color/grayTextColor"
         >
 
         <LinearLayout
