--- a/app/src/main/res/layout/activity_users_list_add.xml
+++ b/app/src/main/res/layout/activity_users_list_add.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    >
     <data>
 
     </data>
 
     <RelativeLayout
+        tools:ignore="SmallSp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".featuer_chat.presentation.activites.users_lists_add_friend.UsersListAddActivity">
@@ -16,8 +17,7 @@
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
-           android:padding="10dp"
-           android:layout_marginTop="10dp"
+           android:layout_marginTop="20dp"
            android:layoutDirection="ltr"
            >
            <Button
@@ -25,6 +25,7 @@
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
+
                android:background="@drawable/arrow_back_shap"
                android:contentDescription="@string/default_web_client_id" />
        </LinearLayout>
