--- a/app/src/main/res/layout/user_item_add_friend.xml
+++ b/app/src/main/res/layout/user_item_add_friend.xml
@@ -36,7 +36,7 @@
 
               <de.hdodenhof.circleimageview.CircleImageView
                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                  android:id="@+id/image_add_friend"
+                  android:id="@+id/btn_image_add_friend"
                   android:layout_width="96dp"
                   android:layout_height="96dp"
                   android:padding="10dp"
