--- a/app/src/main/res/layout/activity_users_chat_list.xml
+++ b/app/src/main/res/layout/activity_users_chat_list.xml
@@ -6,12 +6,25 @@
 
     </data>
 
-    <RelativeLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         tools:ignore="ContentDescription"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:context=".featuer_chat.presentation.activites.user_chat_list_activity.UsersChatListActivity">
+        android:layoutDirection="ltr"
+        tools:context=".featuer_chat.presentation.
+        activites.user_chat_list_activity.UsersChatListActivity"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+        <!-- navivation view should Not be here-->
+
+
+
+
+              <RelativeLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+
+                  >
 
         <LinearLayout
             android:id="@+id/top_bar_chat_list"
@@ -26,11 +39,11 @@
             <LinearLayout
                 android:id="@+id/group_chat_img"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 >
 
                 <ImageView
-                    android:id="@+id/image_chat_user"
+                    android:id="@+id/btn_open_drawer"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -51,10 +64,11 @@
 
             </LinearLayout>
 
+
             <FrameLayout
                 android:id="@+id/add_btn_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <ImageButton
                     android:id="@+id/btn_add_friend"
@@ -71,30 +85,20 @@
                     />
             </FrameLayout>
         </LinearLayout>
-
-        <EditText
-            android:id="@+id/search_textBox"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_below="@id/top_bar_chat_list"
-            android:hint="@string/hint_search_box"
-            android:inputType="text"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:paddingStart="20sp"
-            android:paddingEnd="20dp"
-            android:background="@drawable/text_box_shap_bg_shap"
-            android:autofillHints="password" />
-        <ProgressBar
-            android:id="@+id/users_list_progress_bar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerInParent="true"
-            android:visibility="invisible"
-            android:theme="@style/Theme.TestChatApp.WhiteAccent"
-
-            />
+                  <EditText
+                      android:id="@+id/search_textBox"
+                      android:layout_width="match_parent"
+                      android:layout_height="50dp"
+                      android:layout_below="@id/top_bar_chat_list"
+                      android:hint="@string/hint_search_box"
+                      android:inputType="text"
+                      android:layout_marginLeft="20dp"
+                      android:layout_marginRight="20dp"
+                      android:layout_marginTop="10dp"
+                      android:paddingStart="20sp"
+                      android:paddingEnd="20dp"
+                      android:background="@drawable/text_box_shap_bg_shap"
+                      android:autofillHints="password" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/users_chat_list_recyclerview"
             android:layout_width="match_parent"
@@ -105,5 +109,25 @@
             android:layout_marginEnd="10dp"
             android:padding="10dp"
             android:layout_marginBottom="20dp" />
-    </RelativeLayout>
+
+        <ProgressBar
+            android:id="@+id/users_list_progress_bar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            android:theme="@style/Theme.TestChatApp.WhiteAccent"
+
+            />
+              </RelativeLayout>
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:menu="@menu/nav_bar_side_menu"
+            android:layoutDirection="ltr"
+            />
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
