--- a/app/src/main/res/layout/user_item_add_friend.xml
+++ b/app/src/main/res/layout/user_item_add_friend.xml
@@ -40,7 +40,7 @@
                   android:layout_width="96dp"
                   android:layout_height="96dp"
                   android:padding="10dp"
-                  android:src="@drawable/add"
+                  android:src="@drawable/add_chats_friend_icon"
                   app:civ_border_width="2dp"
                   app:civ_border_color="@color/signTextColor"
                   android:clickable="true"
