--- a/app/src/main/res/layout/activity_chat_messanger_page.xml
+++ b/app/src/main/res/layout/activity_chat_messanger_page.xml
@@ -57,7 +57,7 @@
             android:id="@+id/ly_bottom_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/chat_msg_view_list"
+            android:layout_below="@id/chat_messages_recycle_view"
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
             android:gravity="center"
@@ -111,7 +111,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chat_msg_view_list"
+            android:id="@+id/chat_messages_recycle_view"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:layout_below="@id/top_bar_chat_msg"
