--- a/app/src/main/res/layout/activity_users_chat_list.xml
+++ b/app/src/main/res/layout/activity_users_chat_list.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
 
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawerLayout"
-        tools:ignore="ContentDescription"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/drawerLayout"
+        tools:ignore="ContentDescription"
         android:layoutDirection="ltr"
         tools:context=".featuer_chat.presentation.
-        activites.user_chat_list_activity.UsersChatListActivity"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
-        <!-- navivation view should Not be here-->
+        activites.user_chat_list_activity.UsersChatListActivity">
 
 
 
@@ -23,7 +23,6 @@
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-
                   >
 
         <LinearLayout
@@ -39,9 +38,7 @@
             <LinearLayout
                 android:id="@+id/group_chat_img"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                >
-
+                android:layout_height="match_parent">
                 <ImageView
                     android:id="@+id/btn_open_drawer"
                     android:layout_width="50dp"
@@ -60,8 +57,6 @@
                     android:textSize="40sp"
                     android:textStyle="bold"
                     android:layout_gravity="start" />
-
-
             </LinearLayout>
 
 
@@ -99,26 +94,26 @@
                       android:paddingEnd="20dp"
                       android:background="@drawable/text_box_shap_bg_shap"
                       android:autofillHints="password" />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/users_chat_room_list_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/search_textBox"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:padding="10dp"
-            android:layout_marginBottom="20dp" />
 
-        <ProgressBar
-            android:id="@+id/users_list_progress_bar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerInParent="true"
-            android:visibility="invisible"
-            android:theme="@style/Theme.TestChatApp.WhiteAccent"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/users_chat_room_list_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/search_textBox"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:padding="10dp"
+                    android:layout_marginBottom="20dp"
+                    />
 
-            />
+                  <ProgressBar
+                      android:id="@+id/users_list_progress_bar"
+                      android:layout_width="80dp"
+                      android:layout_height="80dp"
+                      android:layout_centerInParent="true"
+                      android:theme="@style/Theme.TestChatApp.WhiteAccent"
+                      android:visibility="invisible" />
               </RelativeLayout>
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
