--- a/app/src/main/res/layout/user_room_shap.xml
+++ b/app/src/main/res/layout/user_room_shap.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
     </data>
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/root_ly"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:background="@drawable/pressed_user_chat_room_friend"
+
         >
+
             <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image_add_friend"
@@ -20,8 +22,7 @@
             android:src="@drawable/person_icon"
             app:civ_border_width="2dp"
             app:civ_border_color="@color/signTextColor"
-            android:layout_gravity="top"
-            />
+            android:layout_gravity="top"/>
             <LinearLayout
                 android:id="@+id/ly_text_group"
                 android:layout_width="match_parent"
@@ -29,10 +30,11 @@
                 android:layout_margin="5dp"
                 android:orientation="vertical"
                 android:padding="10dp"
+                android:layout_toEndOf="@id/profile_image_add_friend"
                 >
                 <TextView
                     android:id="@+id/user_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/moamn_ali"
                     android:textColor="@color/black"
@@ -40,12 +42,12 @@
                     />
                 <TextView
                     android:id="@+id/last_msg"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/last_message"
 
                     />
             </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </layout>
