--- a/app/src/main/res/values/new_them.xml
+++ b/app/src/main/res/values/new_them.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TestChatApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="myTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/signTextColor</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,12 +10,12 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/black</item>
+        <item name="android:statusBarColor" >@color/grayTextColor</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.TestChatApp.noActionCustomBar">
-        <item name="android:statusBarColor" >@android:color/transparent</item>
+    <style name="NoActionBar" parent="Theme.TestChatApp.noActionCustomBar">
+        <item name="android:statusBarColor" >@color/grayTextColor</item>
         <item name="android:navigationBarColor" >
             @color/white_lighter
         </item>
@@ -23,13 +23,9 @@
             true
         </item>
     </style>
-    <style name="Theme.TestChatApp.WhiteAccent">
+
+
+    <style    name="ThirdStyle"  parent="Theme.TestChatApp.WhiteAccent">
         <item name="colorAccent">@color/signTextColor</item> <!-- Whatever color you want-->
     </style>
-
-    <style name="myStyle">
-        <item name="colorAccent">@color/signTextColor</item> <!-- Whatever color you want-->
-    </style>
-
-
 </resources>
