done make navigation with fragments and make login and profile fragment with single activity with binding

--- a/app/src/main/res/layout/user_item_add_friend.xml
+++ b/app/src/main/res/layout/user_item_add_friend.xml
@@ -8,46 +8,52 @@
 
 
           <RelativeLayout
+              android:id="@+id/root"
               android:layout_width="match_parent"
               android:layout_height="100dp"
+              android:layout_margin="10dp"
+              android:padding="10dp"
+
               >
                 <de.hdodenhof.circleimageview.CircleImageView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/profile_image_add_friend"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:padding="10dp"
                     android:src="@drawable/person_icon"
                     app:civ_border_width="2dp"
                     app:civ_border_color="@color/signTextColor"
-                    android:layout_gravity="top"
+                    android:layout_centerVertical="true"
                     />
                 <TextView
                     android:id="@+id/tv_user_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="@string/user_name"
                     android:textStyle="bold"
                     android:textSize="20sp"
-                    android:layout_marginTop="10dp"
-                    android:padding="10dp"
+                    android:gravity="center"
+                    android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/profile_image_add_friend"
+                    android:layout_marginStart="15dp"
                     />
 
               <de.hdodenhof.circleimageview.CircleImageView
                   xmlns:app="http://schemas.android.com/apk/res-auto"
                   android:id="@+id/btn_image_add_friend"
-                  android:layout_width="96dp"
-                  android:layout_height="96dp"
-                  android:padding="10dp"
+                  android:layout_width="50dp"
+                  android:layout_height="50dp"
                   android:src="@drawable/add_chats_friend_icon"
+                  android:background="@drawable/add_friend_button_shap"
                   app:civ_border_width="2dp"
                   app:civ_border_color="@color/signTextColor"
                   android:clickable="true"
                   android:focusable="true"
-                  android:layout_gravity="end"
+                   android:layout_centerVertical="true"
                   android:contentDescription="@string/add_friend_msg"
                   android:layout_alignParentEnd="true"
+                  android:layout_marginStart="10dp"
                   />
           </RelativeLayout>
 
