--- a/app/src/main/res/drawable/pressed_user_chat_room_friend.xml
+++ b/app/src/main/res/drawable/pressed_user_chat_room_friend.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/background_light"/>
-    <corners android:radius="8dp"/>
-        <selector>
 
-            <item android:state_pressed="true"
-                android:drawable="@color/grayTextColor"
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-                />
+    <item android:drawable="@color/grayTextColor"
+        android:state_pressed="true"
+        />
+    <item android:drawable="@color/white_lighter"
+        android:state_focused="false" />
 
-            <item  android:state_focused="false"
-                android:drawable="@android:color/background_light" />
+</selector>
 
-        </selector>
-</shape>
