--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -10,6 +10,12 @@
     android:layout_marginBottom="15dp"
 
     >
+  <FrameLayout
+      android:id="@+id/fl_fragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+
+      />
   <ImageView
       android:id="@+id/leaves_pic"
       android:layout_width="match_parent"
