--- a/app/src/main/res/layout/activity_users_chat_list.xml
+++ b/app/src/main/res/layout/activity_users_chat_list.xml
@@ -20,12 +20,11 @@
 
 
 
-              <RelativeLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <LinearLayout
+                  <LinearLayout
             android:id="@+id/top_bar_chat_list"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -95,7 +94,7 @@
                       android:background="@drawable/text_box_shap_bg_shap"
                       android:autofillHints="password" />
 
-                <androidx.recyclerview.widget.RecyclerView
+                  <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/users_chat_room_list_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
