--- a/app/src/main/res/layout/item_sound_sender.xml
+++ b/app/src/main/res/layout/item_sound_sender.xml
@@ -17,6 +17,7 @@
         android:background="@drawable/sound_sender_background"
         android:layoutDirection="ltr"
         >
+
         <Button
             android:id="@+id/btn_send"
             android:layout_width="45dp"
@@ -28,11 +29,21 @@
             />
           <com.example.testchatapp.featuer_chat.presentation.activites.chat_massenger_activity.WaveForm
               android:id="@+id/play_wave_form__sender"
-              android:layout_width="match_parent"
+              android:layout_width="200dp"
               android:layout_height="50dp"
               android:layout_gravity="center"
               android:layout_margin="10dp"
               />
+        <TextView
+            android:id="@+id/tv_voice_time"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/time_voice"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
